RESOLVED FIXED268842
[WebGPU] GPUQueue::getImageBytesFromImageBuffer will crash if pixel buffer is nullptr
https://bugs.webkit.org/show_bug.cgi?id=268842
Summary [WebGPU] GPUQueue::getImageBytesFromImageBuffer will crash if pixel buffer is...
Mike Wyrzykowski
Reported 2024-02-06 10:57:48 PST
[WebGPU] GPUQueue::getImageBytesFromImageBuffer will crash if pixel buffer is nullptr
Attachments
Mike Wyrzykowski
Comment 1 2024-02-06 10:58:37 PST
Mike Wyrzykowski
Comment 2 2024-02-06 11:01:19 PST
EWS
Comment 3 2024-02-06 22:04:28 PST
Committed 274197@main (0b1741165d8c): <https://commits.webkit.org/274197@main> Reviewed commits have been landed. Closing PR #23940 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.