[WebGPU] GPUQueue::getImageBytesFromImageBuffer will crash if pixel buffer is nullptr https://bugs.webkit.org/show_bug.cgi?id=268842 <radar://122404631>

Reviewed by Dan Glastonbury.

If the pixel buffer is nullptr, we should stop the import.

* Source/WebCore/Modules/WebGPU/GPUQueue.cpp:
(WebCore::getImageBytesFromImageBuffer):
(WebCore::getImageBytesFromVideoFrame):

Canonical link: https://commits.webkit.org/274197@main